MVP: product, admin, user, cart, checkout + route fix
Backend:
- Implemented and verified all core flows: authentication, products, cart, checkout/orders, admin, and user profile
- Fixed admin inventory/products route wiring issue

Frontend:
- Integrated Angular frontend with backend APIs
- Completed admin dashboard (orders, users, inventory, analytics)
- Connected user profile, wishlist, cart, and checkout flows
- Repeated testing of api integration

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon --watch src src/server.js",
-    "test": "echo \"(add your test runner here)\" && exit 0"
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000",
+    "seed": "node src/utils/seed.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
@@ -19,6 +21,9 @@
     "morgan": "^1.10.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "cross-env": "^10.1.0",
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
